--- a/src/pages/2023/rfp.mdx
+++ b/src/pages/2023/rfp.mdx
@@ -14,9 +14,9 @@ import { TopicSquare } from "../../components/rfp/TopicSquare";
 
 </div>
 
-- Monday, April 3: Request for Programming Released
-- Friday, June 2: Deadline for Submissions
-- Friday, July 14: RFP Decision Notifications
+- **Monday, April 3**: Request for Programming Released
+- **Friday, June 2**: Deadline for Submissions
+- **Friday, July 14**: RFP Decision Notifications
 
 <div className="text-bright-peach font-bold">
 
@@ -112,8 +112,8 @@ Program selection for our conference is highly competitive. Please follow the gu
 #### Your submission will be evaluated based on the following:
   <ul>
     <li>An engaging title and abstract</li>
-    <li>Value to the LGBTQIA+ STEM Community</li>
-    <li>Attendee Engagement</li>
+    <li>Value to the LGBTQIA+ STEM community</li>
+    <li>Attendee engagement</li>
     <li>A breakdown of your program that outlines the questions / topics you will be addressing</li>
     <li>Having experience and/or identity(ies) that support your program proposal</li>
   </ul>
@@ -125,7 +125,7 @@ Program selection for our conference is highly competitive. Please follow the gu
     <li>Please describe any additional technical services you may need. </li>
     <li>The standard room set-up includes a projector, HDMI cord, screen, microphones, and a table. </li>
     <li>For each presenter, please provide a name, contact information, demographic information, a headshot, and a short biography.</li>
-    <li>Content warnings as applicable (for more information, check out <a href="https://sites.lsa.umich.edu/inclusive-teaching-sandbox/wp-content/uploads/sites/853/2021/02/An-Introduction-to-Content-Warnings-and-Trigger-Warnings-Draft.pdf" title="An Introduction to Content Warnings">this resource</a> from the University of Michigan)</li>
+    <li>Content warnings as applicable. (For more information, check out <a href="https://sites.lsa.umich.edu/inclusive-teaching-sandbox/wp-content/uploads/sites/853/2021/02/An-Introduction-to-Content-Warnings-and-Trigger-Warnings-Draft.pdf" title="An Introduction to Content Warnings">this resource</a> from the University of Michigan.)</li>
   </ul>
 <br></br>  
 
@@ -144,10 +144,10 @@ Program selection for our conference is highly competitive. Please follow the gu
       </ul>
     </li>
     <li>
-      <b>What is the value of this workshop to the LGBTQ+ STEM Community?</b> 
+      <b>What is the value of this workshop to the LGBTQIA+ STEM Community?</b> 
       <ul>
         <li>Describes and justifies the workshop’s value</li>
-        <li>Establishes relevance to LGBTQ+ and STEM communities</li>
+        <li>Establishes relevance to LGBTQIA+ and STEM communities</li>
         <li>States: what makes this program unique to this conference?</li>
       </ul>
     </li>
@@ -197,6 +197,6 @@ Please email our Conference Programming Committee at
 conference-programming@ostem.org with any questions.
 
 For inquiries regarding available conference accommodations or to request this
-document in an accessible format, please contact the Conference Accessiblity Team at access@ostem.org.
+document in an accessible format, please contact the accessibility team at access@ostem.org.
 
 </SiteLayout>
