Updated new banner image

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -60,7 +60,7 @@ import { SiteLayout } from "../components/layout/SiteLayout";
   <div className="rounded-l md:col-span-5 tint tint-dark mt-7">
     <img
       className="rounded-l object-cover w-full h-full"
-      src="/images/oSTEM.2019.0049_Update_BannerSize.jpg"
+      src="/images/2023/2023_homepage_bannerupdate.jpg"
       alt=""
     />
   </div>
