Add hyperlink to nomination jotforms

--- a/src/pages/2023/awards.mdx
+++ b/src/pages/2023/awards.mdx
@@ -69,6 +69,7 @@ info@ostem.org or by contacting the individual team responsible for the award._
       "Must be attending the oSTEM Annual Conference",
     ]}
     alert="Self-nominations are accepted and encouraged. If you have any questions regarding this application, please contact us at info@ostem.org."
+    nominateUrl="https://form.jotform.com/222027099625154"
   />
 </div>
 
@@ -88,6 +89,7 @@ info@ostem.org or by contacting the individual team responsible for the award._
     ]}
     borderColor="border-blue-500"
     alert="Please only submit one nomination per chapter. If you have any questions regarding this application, please contact us at membership@ostem.org."
+    nominateUrl="https://form.jotform.com/222027292838155"
   />
 
 <AwardCard
@@ -100,6 +102,7 @@ info@ostem.org or by contacting the individual team responsible for the award._
   ]}
   borderColor="border-blue-500"
   alert="Please only submit one nomination per chapter. If you have any questions regarding this application, please contact us at membership@ostem.org."
+  nominateUrl="https://form.jotform.com/222026969779169"
 />
 
 <AwardCard
@@ -111,18 +114,20 @@ info@ostem.org or by contacting the individual team responsible for the award._
   ]}
   borderColor="border-blue-500"
   alert="Self-nominations are accepted and encouraged. If you have any questions regarding this application, please contact us at membership@ostem.org."
+  nominateUrl="https://form.jotform.com/222027345765153"
 />
 
-  <AwardCard
-    title="oSTEM Advisor of the Year"
-    desc="This award recognizes those advisors who have gone above and beyond in their support to one or more oSTEM chapters. The guiding purpose of the oSTEM organization is to empower LGBTQ+ people in STEM to succeed personally, academically, and professionally by cultivating environments and communities that nurture innovation, leadership, and advocacy. Our chapter's advisors support our chapters in succeeding in this mission. Their enthusiasm, advice and dedication is a role model for our chapters. If your advisor has made a significant effort toward achieving these goals on your campus and in your community we ask you to nominate them so they can be recognized for their effort."
-    elig={[
-      "Must be an advisor of a verified Standard oSTEM Chapter or Affiliate Chapter of active status in good standing with your Regional Coordinator",
-      "Must be attending the oSTEM Annual Conference"
-    ]}
-    borderColor="border-blue-500"
-    alert="Self-nominations are accepted and encouraged. If you have any questions regarding this application, please contact us at membership@ostem.org."
-  />
+<AwardCard
+  title="oSTEM Advisor of the Year"
+  desc="This award recognizes those advisors who have gone above and beyond in their support to one or more oSTEM chapters. The guiding purpose of the oSTEM organization is to empower LGBTQ+ people in STEM to succeed personally, academically, and professionally by cultivating environments and communities that nurture innovation, leadership, and advocacy. Our chapter's advisors support our chapters in succeeding in this mission. Their enthusiasm, advice and dedication is a role model for our chapters. If your advisor has made a significant effort toward achieving these goals on your campus and in your community we ask you to nominate them so they can be recognized for their effort."
+  elig={[
+    "Must be an advisor of a verified Standard oSTEM Chapter or Affiliate Chapter of active status in good standing with your Regional Coordinator",
+    "Must be attending the oSTEM Annual Conference"
+  ]}
+  borderColor="border-blue-500"
+  alert="Self-nominations are accepted and encouraged. If you have any questions regarding this application, please contact us at membership@ostem.org."
+  nominateUrl="https://form.jotform.com/222065689655164"
+/>
 </div>
 
 <div className="text-bright-peach font-bold">
@@ -133,15 +138,16 @@ info@ostem.org or by contacting the individual team responsible for the award._
 
 <div>
 <AwardCard
-    title="oSTEM Strategic Alliance Award"
-    desc="This award is presented to a current sponsoring organization, community partner, or grant provider of oSTEM who has demonstrated a strong dedication to oSTEM, LGBTQ+ people in STEM, and STEM education. They are recognized leaders in LGBTQ+ workplace or institutional inclusion. They are a consistent supporter of oSTEM, Inc. and regularly engage with and support oSTEM chapters. They are committed to and continually strive to understand the most effective methods for reaching equality for all people."
-    elig={[
-      "Must be a current sponsoring organization of oSTEM",
-      "Must be have a representative attending the oSTEM Annual Conference"
-    ]}
-    borderColor="border-yellow-500"
-    alert="Self-nominations are accepted and encouraged. Please only submit one nomination per organization. If you have any questions regarding this application, please contact us at sponsorship@ostem.org."
-  />
+  title="oSTEM Strategic Alliance Award"
+  desc="This award is presented to a current sponsoring organization, community partner, or grant provider of oSTEM who has demonstrated a strong dedication to oSTEM, LGBTQ+ people in STEM, and STEM education. They are recognized leaders in LGBTQ+ workplace or institutional inclusion. They are a consistent supporter of oSTEM, Inc. and regularly engage with and support oSTEM chapters. They are committed to and continually strive to understand the most effective methods for reaching equality for all people."
+  elig={[
+    "Must be a current sponsoring organization of oSTEM",
+    "Must be have a representative attending the oSTEM Annual Conference"
+  ]}
+  borderColor="border-yellow-500"
+  alert="Self-nominations are accepted and encouraged. Please only submit one nomination per organization. If you have any questions regarding this application, please contact us at sponsorship@ostem.org."
+  nominateUrl="https://form.jotform.com/221886614075057"
+/>
 
 <AwardCard
   title="oSTEM Partner Excellence Award"
@@ -152,18 +158,20 @@ info@ostem.org or by contacting the individual team responsible for the award._
   ]}
   borderColor="border-yellow-500"
   alert="Self-nominations are accepted and encouraged. If you have any questions regarding this application, please contact us at sponsorship@ostem.org."
+  nominateUrl="https://form.jotform.com/221886612511151"
 />
 
 <AwardCard
-    title="oSTEM LGBTQ+ Employee Network of the Year"
-    desc="Support, a sense of belonging, and encouragement are key to employee growth, positive performance, and retention. Employee Networks have stepped in to fulfill these basic human needs through the creation of a community that supports employees, champions inclusion and diversity, and reaches out to better the community around them for all people. The vitality of these employee groups cannot be overstated, and the hard work they do deserves recognition. The oSTEM LGBTQ+ Employee Network of the Year Award highlights and applauds the work of an organization's employee network that embodies the oSTEM mission of empowering LGBTQ+ people in STEM to succeed personally, academically, and professionally through the cultivation of environments and communities that nurture innovation, leadership, and advocacy."
-    elig={[
-      "Must be a current sponsoring organization of oSTEM",
-      "Must be have a representative attending the oSTEM Annual Conferencee"
-    ]}
-    borderColor="border-yellow-500"
-    alert="Self-nominations are accepted and encouraged. Please only submit one nomination per organization. If you have any questions regarding this application, please contact us at sponsorship@ostem.org."
-  />
+  title="oSTEM LGBTQ+ Employee Network of the Year"
+  desc="Support, a sense of belonging, and encouragement are key to employee growth, positive performance, and retention. Employee Networks have stepped in to fulfill these basic human needs through the creation of a community that supports employees, champions inclusion and diversity, and reaches out to better the community around them for all people. The vitality of these employee groups cannot be overstated, and the hard work they do deserves recognition. The oSTEM LGBTQ+ Employee Network of the Year Award highlights and applauds the work of an organization's employee network that embodies the oSTEM mission of empowering LGBTQ+ people in STEM to succeed personally, academically, and professionally through the cultivation of environments and communities that nurture innovation, leadership, and advocacy."
+  elig={[
+    "Must be a current sponsoring organization of oSTEM",
+    "Must be have a representative attending the oSTEM Annual Conferencee"
+  ]}
+  borderColor="border-yellow-500"
+  alert="Self-nominations are accepted and encouraged. Please only submit one nomination per organization. If you have any questions regarding this application, please contact us at sponsorship@ostem.org."
+  nominateUrl="https://form.jotform.com/221886946930166"
+/>
 </div>
 
 <div className="text-bright-peach font-bold">
@@ -172,14 +180,14 @@ info@ostem.org or by contacting the individual team responsible for the award._
 
 </div>
 <AwardCard
-    title="oSTEM Volunteer of the Year & Spotlights"
-    desc="Description Coming Soon"
-    elig={[
-      "Must be an oSTEM Global Volunteer",
-      "Must be attending the oSTEM Annual Conference"
-    ]}
-    borderColor="border-green-500"
-  />
+  title="oSTEM Volunteer of the Year & Spotlights"
+  desc="Description Coming Soon"
+  elig={[
+    "Must be an oSTEM Global Volunteer",
+    "Must be attending the oSTEM Annual Conference"
+  ]}
+  borderColor="border-green-500"
+/>
 <div>
 
 </div>
