Add detailed page for each award

--- a/src/pages/2023/awards.mdx
+++ b/src/pages/2023/awards.mdx
@@ -70,6 +70,7 @@ info@ostem.org or by contacting the individual team responsible for the award._
     ]}
     alert="Self-nominations are accepted and encouraged. If you have any questions regarding this application, please contact us at info@ostem.org."
     nominateUrl="https://form.jotform.com/222027099625154"
+    awardDetailUrl="\2023\awards-global-stem-service"
   />
 </div>
 
@@ -90,6 +91,7 @@ info@ostem.org or by contacting the individual team responsible for the award._
     borderColor="border-blue-500"
     alert="Please only submit one nomination per chapter. If you have any questions regarding this application, please contact us at membership@ostem.org."
     nominateUrl="https://form.jotform.com/222027292838155"
+    awardDetailUrl="\2023\awards-overall-chapter"
   />
 
 <AwardCard
@@ -103,6 +105,7 @@ info@ostem.org or by contacting the individual team responsible for the award._
   borderColor="border-blue-500"
   alert="Please only submit one nomination per chapter. If you have any questions regarding this application, please contact us at membership@ostem.org."
   nominateUrl="https://form.jotform.com/222026969779169"
+  awardDetailUrl="\2023\awards-rookie-chapter"
 />
 
 <AwardCard
@@ -115,6 +118,7 @@ info@ostem.org or by contacting the individual team responsible for the award._
   borderColor="border-blue-500"
   alert="Self-nominations are accepted and encouraged. If you have any questions regarding this application, please contact us at membership@ostem.org."
   nominateUrl="https://form.jotform.com/222027345765153"
+  awardDetailUrl="\2023\awards-chapter-leader"
 />
 
 <AwardCard
@@ -147,6 +151,7 @@ info@ostem.org or by contacting the individual team responsible for the award._
   borderColor="border-yellow-500"
   alert="Self-nominations are accepted and encouraged. Please only submit one nomination per organization. If you have any questions regarding this application, please contact us at sponsorship@ostem.org."
   nominateUrl="https://form.jotform.com/221886614075057"
+  awardDetailUrl="/2023/awards-strategic-alliance"
 />
 
 <AwardCard
@@ -159,6 +164,7 @@ info@ostem.org or by contacting the individual team responsible for the award._
   borderColor="border-yellow-500"
   alert="Self-nominations are accepted and encouraged. If you have any questions regarding this application, please contact us at sponsorship@ostem.org."
   nominateUrl="https://form.jotform.com/221886612511151"
+  awardDetailUrl="/2023/awards-partner-excellence"
 />
 
 <AwardCard
@@ -171,6 +177,7 @@ info@ostem.org or by contacting the individual team responsible for the award._
   borderColor="border-yellow-500"
   alert="Self-nominations are accepted and encouraged. Please only submit one nomination per organization. If you have any questions regarding this application, please contact us at sponsorship@ostem.org."
   nominateUrl="https://form.jotform.com/221886946930166"
+  awardDetailUrl="/2023/awards-lgbtq-employee-network"
 />
 </div>
 
