--- a/src/pages/2023/awards-global-stem-service.mdx
+++ b/src/pages/2023/awards-global-stem-service.mdx
@@ -32,7 +32,7 @@ regarding this application, please contact us at info@ostem.org.
 
 <br />
 <div align="center">
-  <AwardCardButton url="https://docs.google.com/forms/d/e/1FAIpQLSdYJ94Ct5PyKn90vO3ms1q2Xjt1XdQg_7jT8pC8MvUbvyIRcw/viewform">
+  <AwardCardButton url="https://forms.gle/r2csAKKiTSuie1JC8">
     Nominate Someone for this Award
   </AwardCardButton>
 </div>
